# mcrt-intro

./: CMakeLists.txt
1-classical-raytracer/: CMakeLists.txt  camera.h  main.cpp  obj.cpp  obj.h  shape.h
1-classical-raytracer/include/: intersector.h  shape.h
2-simple-pt/: CMakeLists.txt  main.cpp  obj.cpp
2-simple-pt/include/: integrator.h  sampler.h  shape.h
3-pt/: main.cpp
3-pt/include/: bsdf.h  camera.h  core.h  integrator.h  intersector.h  primitive.h  scene.h  shape.h
3-pt/reference/include/: scene.h
4-bvh/: main.cpp
4-bvh/include/: intersector.h
